--- a/lab/02_lab_rubypractice.md.erb
+++ b/lab/02_lab_rubypractice.md.erb
@@ -5,6 +5,7 @@ css_class: red bold
 <%= homework_hdr %>
 * You must have your Vagrant VM, Ruby and Rails working by now. Get help if you don't
 * Read AWDR Chapter 1, although the VM will have everything set up for you
+* Read AWDR Chapter 4, which will review what you've learned about Ruby so far
 
 ##### Lab Objectives
 * Discuss <%= link_to_pa :PA1 %>
