--- a/lab/02_lab_rubypractice.md.erb
+++ b/lab/02_lab_rubypractice.md.erb
@@ -5,10 +5,11 @@ css_class: red bold
 <%= homework_hdr %>
 * You must have your Vagrant VM, Ruby and Rails working by now. Get help if you don't
 * Read AWDR Chapter 1, although the VM will have everything set up for you
-* Read AWDR Chapter 4, which will review what you've learned about Ruby so far
+* Read AWDR Chapter 4, which will review what you've learned about Ru
+by so far
 
 ##### Lab Objectives
-* Discuss <%= link_to_pa :PA1 %>
-* Introduce <%= link_to_pa :PA2 %>
-* Product Selection discussion as needed
-* Look for a cool gem and try it out in a test ruby program
+* Amin: Discuss <%= link_to_pa :PA1 %>, common coding "smells" based on your PA1 submissions.
+* Amin: Introduce <%= link_to_pa :PA2 %>, explain it, talk about CodeClimate
+* Pito: Product Selection final discussion
+* Amin: More Ruby concepts and demos. Look for a cool gem and try it out in a test ruby program
