small fixes, add mentoring

--- a/background/10_project_process.md.erb
+++ b/background/10_project_process.md.erb
@@ -1,6 +1,7 @@
 ---
 title: How Projects Work
 type: page
+css_class: red bold
 ---
 ##### Products
 
@@ -17,6 +18,5 @@ type: page
 	* Web Services/Deployment/System integration/Testing
 
 #### How we will run our projects
+* Also at <%= link_to_topic :agile_projects_intro %>
 * Look at <%= link_to_topic :agile_development %>
-
-<%= include_topic :agile_projects_intro %>
