--- a/background/13_extra_credit_assignments.md.erb
+++ b/background/13_extra_credit_assignments.md.erb
@@ -1,5 +1,6 @@
 ---
 title: Extra Credit
+type: page
 css_class: red bold
 ---
 * As mentioned in <%= link_to_background :grading %> you can choose to do some extra credit work to add to your grade. 
