--- a/lab/02_lab_rubypractice.md.erb
+++ b/lab/02_lab_rubypractice.md.erb
@@ -8,6 +8,8 @@ css_class: red bold
 * Read AWDR Chapter 4, which will review what you've learned about Ru
 by so far
 
+#### Note to self: Post-it-notes
+
 ##### Lab Objectives
 * Amin: Discuss <%= link_to_pa :PA1 %>, common coding "smells" based on your PA1 submissions.
 * Amin: Introduce <%= link_to_pa :PA2 %>, explain it, talk about CodeClimate
