--- a/lectures/iter1/06_iter1_done.md.erb
+++ b/lectures/iter1/06_iter1_done.md.erb
@@ -6,7 +6,7 @@ title: Iteration 1 Presentations
 * Team Checkpoint presentations. Cover: What is your product, what are your first sets of stories, what is your vision for your project, how you will work as a team, where you think things will be challenging and how you plan to do their work."what is the product.
 	* <%= team_deliverable "All four members of the team should participate in a 5-10 minute presentation" %>
 
-#### Presentations
+#### 5-minute online survey
 
 #### Next Class
 * Look at homework: <%= link_to_lecture :rails_intro %> 
