--- a/pa/03_PA2.md.erb
+++ b/pa/03_PA2.md.erb
@@ -50,4 +50,6 @@ You should write comments for each of the methods of your two classes and use Rd
 
 <%= deliverable "A short screen recording showing you using irb to load the ml-100k folder into MovieData, run some tests of the instance methods, generate a MovieTest data with 10 rows from the testing set, and running the instance methods of the MovieTest object. " %>
 
+<%= deliverable "A link of the result of submitting your code to code climate" %>
+
 <%= important %> This will take a few hours but don't spend too much time trying to get a super accurate prediction algorithm.  There are several published papers on this subject and the goal here is just to give you some practice writing useful Ruby code and the let you think about big data for your own applications....  If you want to create a really good prediction algorithm.  First complete this PA2 with a really simple predictor and get everything done.  Then go back and refine the algorithm, but only if you don't have more important projects to work on!  This is a really fun kind of project to work on, especially once you start getting the hang of writing ruby code to implement sophisticated algorithms.  We'll discuss some very simple algorithms in class...
