--- a/lab/02_lab_rubypractice.md.erb
+++ b/lab/02_lab_rubypractice.md.erb
@@ -10,8 +10,17 @@ by so far
 
 #### Note to self: Post-it-notes
 
-##### Lab Objectives
-* Amin: Discuss <%= link_to_pa :PA1 %>, common coding "smells" based on your PA1 submissions.
+#### Lab Objectives
+
+##### Hour 1
+* Pito: Discuss <%= link_to_pa :PA1 %> solutions
+* Amin: Discuss Common coding "smells" based on your PA1 submissions.
 * Amin: Introduce <%= link_to_pa :PA2 %>, explain it, talk about CodeClimate
-* Pito: Product Selection final discussion
+
+##### Hour 2
+* Pito: Product Selection final discussion. Discuss.
+* Break into groups. Discuss among yourselves:
+	* what role (team and technical) each person seems to fall into
+	* What interests the team most about this product
+<hr/>
 * Amin: More Ruby concepts and demos. Look for a cool gem and try it out in a test ruby program
