--- a/lectures/iter1/04_ruby2.md.erb
+++ b/lectures/iter1/04_ruby2.md.erb
@@ -7,6 +7,12 @@ type: page
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
 * Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with Bundler. <%= deliverable "Write a blog post explaining what you learned." %>
 * <%= deliverable "Check in your PA2 so far into Github" %>
+* <%= team_deliverable "Write your project kickoff post in Piazza" %>
+	* Each team get meets to jointly write their team kickoff piazza post
+		* Confirm team members
+		* Name of product
+		* what role (team and technical) each person seems to fall into
+		* What interests the team most about this product
 
 #### Ruby Gems
 * Package Management
