add one link of interest

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -15,3 +15,4 @@ type: page
 * [MiniTest::Spec tutorial](http://www.rubyinside.com/a-minitestspec-tutorial-elegant-spec-style-testing-that-comes-with-ruby-5354.html)
 * [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
 * [Rails Testing Pyramid](http://blog.codeclimate.com/blog/2013/10/09/rails-testing-pyramid/)
+* [Twelve Factor App](http://12factor.net)
