more details about OO design

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -16,3 +16,5 @@ type: page
 * [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
 * [Rails Testing Pyramid](http://blog.codeclimate.com/blog/2013/10/09/rails-testing-pyramid/)
 * [Ruby Toolbox](http://ruby-toolbox.com)
+* [Object Oriented Design Patterns in Ruby](http://www.brpreiss.com/books/opus8/)
+* [Duck Typing](http://blog.rubybestpractices.com/posts/gregory/046-issue-14-duck-typing.html)
