--- a/lectures/iter1/04_ruby2.md.erb
+++ b/lectures/iter1/04_ruby2.md.erb
@@ -14,17 +14,37 @@ type: page
 		* what role (team and technical) each person seems to fall into
 		* What interests the team most about this product
 
+#### Mention
+* Elevator pitches on Monday
+* Live coding seminar today at 3pm in Volen 118
+* Office hours:
+	* Pito: Thursday 10:00am-11:30 in my office
+	* Amin: Tue and Friday 10:00-11:00 in TBD
+
+#### Object Oriented Design
+* classes: How do you decide what a class is and what it is not?
+* classes and objects
+* instance variables
+* constructor (no destructor
+* methods: private/public
+* inheritence: rarely is this the best solution
+* composition and delegation: a better solution
+* Polymorphism
+* "Duck" typing.
+	* Do you see how duck typing is an alternative/complement to inheritence?
+	* Consider a method like #can_speak? in a gaming application
+
 #### Ruby Gems
 * Package Management
 * Ruby Gems
 * Ruby Bundler
-
-#### Project Selection and team formation
-* Discussion / Brainstorm
-
+ 
 #### Ruby Live Coding Demonstration and discussion
-
 <%= include_ruby :classes_tut %>
+
+##### Reference
+* Great book on OO Design: [Practical OO Design in Ruby](http://www.poodr.com/book/)
+
 
 #### Next Class
 * Look at homework: <%= link_to_lecture :url_intro %> 
