--- a/pa/03_PA2.md.erb
+++ b/pa/03_PA2.md.erb
@@ -5,6 +5,9 @@ copyright: Tim Hickey
 ---
 You are to extend your <%= link_to_pa :PA1 %> to include a prediction method that will predict the rating a user would give to a movie and you are to run some tests to determine how accurate your method is.
 
+    Note: After using this a few times, I think there are slightly better ways to organize
+the classes. You are welcome to either follow these instructions exactly or to come up with a 'better' design.
+
 You should implement two classes: MovieData  and MovieTest with the following specifications:
 
 MovieData has a constructor that takes a path to the folder containing the movie data (ml-100k for example) a second optional constructor can be used to specify that a particular base/training set pair should be read. 
