--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -20,3 +20,4 @@ type: page
 * [Duck Typing](http://blog.rubybestpractices.com/posts/gregory/046-issue-14-duck-typing.html)
 * [Twelve Factor App](http://12factor.net)
 * [Ruby Toolbox](http://ruby-toolbox.com)
+* [SVD Recommendation System in Ruby](http://www.igvita.com/2007/01/15/svd-recommendation-system-in-ruby/)
