reorg iter2, iter3, etc

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -21,3 +21,4 @@ type: page
 * [Twelve Factor App](http://12factor.net)
 * [Ruby Toolbox](http://ruby-toolbox.com)
 * [SVD Recommendation System in Ruby](http://www.igvita.com/2007/01/15/svd-recommendation-system-in-ruby/)
+* [SOLID - Single Responsibility Principle](http://dev.tutsplus.com/tutorials/solid-part-1-the-single-responsibility-principle--net-36074)
