--- a/lectures/iter1/06_iter1_done.md.erb
+++ b/lectures/iter1/06_iter1_done.md.erb
@@ -3,10 +3,8 @@ title: Iteration 1 Presentations
 ---
 ##### Homework due for today
 * Work on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
-* Team Checkpoint presentations. Cover: What is your product, what are your first sets of stories, what is your vision for your project, how you will work as a team, where you think things will be challenging and how you plan to do their work."what is the product.
-	* <%= team_deliverable "All four members of the team should participate in a 5-10 minute presentation" %>
 
-#### 5-minute online survey
+#### 5-minute online survey!
 
 #### Next Class
 * Look at homework: <%= link_to_lecture :rails_intro %> 
