--- a/incubator/10_mentors.md.erb
+++ b/incubator/10_mentors.md.erb
@@ -14,15 +14,13 @@ The teams should be getting the concepts and nuts and bolts of building the prod
 #### Interactions
 The mentor is welcome to structure his or her involvement in whatever way that is agreeable. This is a model for how it might work.
 
-* *Late Jan/Early Feb*: Team prepares a Google Drive "Dossier" about their product. The Dossier will be maintained over the duration of the project.
-* *Early Feb*: Team + mentor have a face to face kick-off meeting, at the mentors convenience. The objective of the meeting will be to have everyone meet each other, and to set a baseline. The meeting will have a specific agenda.
-* *Early Mar*: The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting.
-* *Early April*: The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting.
-* *Very early in May:* Final presentation day. By now the products should be in a demoable state. Each student team will have 15 minutes to present their product to an invited audience. The mentor is invited to be an outside expert to help judge the results.
+* **Team Prep**: (Late Jan/Early Feb) Team prepares a Google Drive "Dossier" about their product. The Dossier will be maintained over the duration of the project.
+* **Face to Face Meeting** (Early Feb) Team + mentor have a face to face kick-off meeting, at the mentors convenience. The objective of the meeting will be to have everyone meet each other, and to set a baseline. The meeting will have a specific agenda.
+* **Phone or Skype meeting** (Early Mar) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting.
+* **Phone or Skype meeting**: (Early April) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting.
+* **Final Presenetation:** (Very early in May) Final presentation day. By now the products should be in a demoable state. Each student team will have 15 minutes to present their product to an invited audience. The mentor is invited to be an outside expert to help judge the results.
 
 ##### Student and teacher responsibility
 * Prepare a framework of questions and issues to discuss with the mentor
 * Design an appropriate agenda for the meeting, built around the convenience of the mentor
 * Making sure the mentor has update materials several days before the call
-
-
