--- a/lectures/iter1/04_ruby2.md.erb
+++ b/lectures/iter1/04_ruby2.md.erb
@@ -1,6 +1,5 @@
 ---
 title: More Ruby
-css_class: bold
 ---
 #### Homework due for today
 
@@ -21,18 +20,7 @@ css_class: bold
 	* Pito: Thursday 10:00am-11:30 in my office
 	* Amin: Tue and Friday 10:00-11:00 in TBD
 
-#### Object Oriented Design
-* classes: How do you decide what a class is and what it is not?
-* classes and objects
-* instance variables
-* constructor (no destructor
-* methods: private/public
-* inheritence: rarely is this the best solution
-* composition and delegation: a better solution
-* Polymorphism
-* "Duck" typing.
-	* Do you see how duck typing is an alternative/complement to inheritence?
-	* Consider a method like #can_speak? in a gaming application
+<%= include_topic :oo_design %>
 
 #### Ruby Gems
 * Package Management
@@ -42,9 +30,6 @@ css_class: bold
 #### Ruby Live Coding Demonstration and discussion
 <%= include_ruby :classes_tut %>
 
-##### Reference
-* Great book on OO Design: [Practical OO Design in Ruby](http://www.poodr.com/book/)
-
 
 #### Next Class
-* Look at homework: <%= link_to_lecture :url_intro %> 
+* Look at homework: <%= link_to_lecture :plan_of_attack %> 
