continue reorganizing, move stuff earlier

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -22,3 +22,6 @@ type: page
 * [Ruby Toolbox](http://ruby-toolbox.com)
 * [SVD Recommendation System in Ruby](http://www.igvita.com/2007/01/15/svd-recommendation-system-in-ruby/)
 * [SOLID - Single Responsibility Principle](http://dev.tutsplus.com/tutorials/solid-part-1-the-single-responsibility-principle--net-36074)
+* [How to design a user experience flow chart](http://www.startuprocket.com/blog/how-to-create-a-user-experience-flow-chart-ux-flow-chart)
+* [User Experience: Stop designing screens and start designing flows](http://uxdesign.smashingmagazine.com/2012/01/04/stop-designing-pages-start-designing-flows/)
+ * [Effective use of white space in forms](http://www.nngroup.com/articles/form-design-white-space/)
