--- a/lectures/iter1/05_plan_of_attack.md.erb
+++ b/lectures/iter1/05_plan_of_attack.md.erb
@@ -9,17 +9,20 @@ css_class: bold
 #### Products: Plan of Attack
 
 ##### Iter2 - "Hello World"
-* Paper prototype
-* Screen Flows
-* Schema in detail
-* Pivotal tracker with lots of stories, prioritized
-* Identify and research difficult tech issues'
+* Prepare "dossier" for mentor as a Google Drive
+	* Paper prototype
+	* Screen Flows
+	* Schema in detail
+	* Pivotal tracker with lots of stories, prioritized
+	* Identify and research 'difficult tech issues'
 * Complete Model
-* Initial Controller and Views
+* Initial set of controller and views
+* authentication
 * Initial build
 
 ##### Iter 3 -  "Pre-Alpha"
-* authentication
+* Update "dossier", meet with Mentor
+* Cloud deployment
 * Unit testing
 * Feature work
 * Prettier html, css, javascript
@@ -27,11 +30,24 @@ css_class: bold
 * Continuous integration
 
 ##### Iter 4 - "MVP"
-* Cloud deployment
+* Update "dossier", meet with Mentor
 * Initial beta users, get feedback
-* Mobile support with JQuery Mobile
 * Complete MVP feature set
 * Beautiful user interface
+
+##### Iter 4 - "Unveiling"
+* Update "dossier", meet with Mentor
+* Final touches
+* Presentations
+
+#### Iter2: In more detail
+* <%= discussion "What are \"difficult technical issues?\"" %>
+* <%= discussion "Mentors" %> (<%= link_to_incubator :mentors %>)
+
+#### Next Class
+
+
+
 
 
 
