--- a/incubator/10_mentors.md.erb
+++ b/incubator/10_mentors.md.erb
@@ -25,4 +25,14 @@ The mentor is welcome to structure his or her involvement in whatever way that i
 * Design an appropriate agenda for the meeting, built around the convenience of the mentor
 * Making sure the mentor has update materials several days before the call
 
+##### Projects Still Seeking a mentor
+* <%= link_to_incubator :vaperater %>
+* <%= link_to_incubator :tradeassistant %>
+* <%= link_to_incubator :whatsgoingon %>
+* <%= link_to_incubator :caltask %>
+* <%= link_to_incubator :affective_tutor %>
+
+
+
+
 
