lecture 5 and 6 updates

--- a/lectures/iter1/05_plan_of_attack.md.erb
+++ b/lectures/iter1/05_plan_of_attack.md.erb
@@ -41,10 +41,12 @@ css_class: bold
 * Presentations
 
 #### Iter2: In more detail
+* Each team tee up a discusion about your product
 * <%= discussion "What are \"difficult technical issues?\"" %>
 * <%= discussion "Mentors" %> (<%= link_to_incubator :mentors %>)
 
-#### Next Class
+#### Look at next class
+* Review Paper Prototyping homework for: <%= link_to_lecture :dossier %>
 
 
 
