--- a/lectures/iter1/06_dossier.md.erb
+++ b/lectures/iter1/06_dossier.md.erb
@@ -7,11 +7,15 @@ title: Building the Dossier
 
 #### 5-minute online survey!
 
-#### Dossier
-* Plan for mentors: <%= link_to_incubator :mentors %>
+#### Building the Dossier
+* Review plan for mentors: <%= link_to_incubator :mentors %>
+
 * What goes into the 'dossier'
 	* Review: <%= link_to_topic :paper_prototyping %>
 	* Review: <%= link_to_topic :ux_flows %>
 	* Review: <%= link_to_topic :data_modeling %>
+
 * Product by product discussion
-* Look at homework: <%= link_to_lecture :rails_intro %> 
+
+#### Look at next class
+* Look at homework: <%= link_to_lecture :db_design %> 
