work on lecture 2-1

--- a/lectures/iter2/01_db_design.md.erb
+++ b/lectures/iter2/01_db_design.md.erb
@@ -1,20 +1,26 @@
 ---
 title: Database Design
-type: page
 ---
 <%= homework_hdr %>
-* Do research on the "Active Record Pattern". Here are some links to start with
+* Do research on the "Active Record Pattern". Here are some links to start with:
 	* Martin Fowler's [Active Record Pattern](http://www.martinfowler.com/eaaCatalog/activeRecord.html)
 	* [Wikipedia on ActiveRecord](http://en.wikipedia.org/wiki/Active_record_pattern)
 	* Read and and try to understand Martin Fowler's [ORM Hate](http://martinfowler.com/bliki/OrmHate.html)
-	* Write a blog post about ORM and the Active Record pattern. <%= deliverable "Piazza post with reflection."
-* Read [Basics of good database design in Web Development](http://www.onextrapixel.com/2011/03/17/the-basics-of-good-database-design-in-web-development/) - thank you Deema!
+	* Write a blog post about ORM, the Active Record pattern, what you learned, understood and didn't follow. <%= deliverable "Piazza post with reflection." %>
+* Read [Basics of good database design in Web Development](http://www.onextrapixel.com/2011/03/17/the-basics-of-good-database-design-in-web-development/)
 * Product Teams: Using all that background, develop initial schema for your product. Include table names, field or attribute names, and relations or joins. <%= team_deliverable "Detailed initial schema for your product. Any form you want." %>
 * Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %>
 
-#### Relational Databases and Object Oriented Languages
+#### Review of DB Design
+* Link to <%= link_to_topic :data_modeling %>
 
+#### Relational Databases and Object Oriented Software
+* What does an ORM do?
+* The Rails Activerecord layer
+* What is the relationship between the underlying DB and the AR objects
+* What is database Migration. What problem does it solve?
 
+#### Review each of the 5 products tables so far
 
 #### Next Class
-* Review Homework: <%= link_to_lecture :tdd %>
+* Review Homework: <%= link_to_lecture :db_implementation %>
