tweaks of homeworks

--- a/lectures/iter2/03_mvc_and_model.md.erb
+++ b/lectures/iter2/03_mvc_and_model.md.erb
@@ -1,9 +1,8 @@
 ---
 title: MVC and the model
-type: page
 ---
 ##### Homework due for today's class
-* Read AWDR Chapter 5
-* Read AWDR Chapter 6. Notice that "rails new depot" creates a directory called "depot" from whereever you are. So cd to your /mydev and to rails new depot from there. Follow along and do all the code, prove to yourself that it runs. <%= deliverable "Create a github repo and push the code the depot rails app so far" %>
+* Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %> 
+
 
 ##### Data
