--- a/pa/03_PA2.md.erb
+++ b/pa/03_PA2.md.erb
@@ -48,7 +48,7 @@ You should write comments for each of the methods of your two classes and use Rd
   * Benchmarking. An estimate of the time it takes run each prediction (determined by using Time.now to capture the current clock time before and after making k predictions) and an explanation of what you think will happen to that time if you increase the size of the training set by a factor of 10 or 100....
   * Connection to your Incubator Project. A description of the kind of data your webapp could collect and the kinds of predictions it could make (if you wanted to do so....)
 
-<%= deliverable "Comments on at least four of your fellow student's blog posts." %>
+<%= deliverable "Comments on at least two (was four) of your fellow student's blog posts." %>
 
 <%= deliverable "The code for your classes in movie_data.rb and movie_test.rb uploaded to github in a folder called PA2" %>
 
