--- a/lectures/iter1/05_plan_of_attack.md.erb
+++ b/lectures/iter1/05_plan_of_attack.md.erb
@@ -4,7 +4,7 @@ css_class: bold
 ---
 <%= homework_hdr %>
 * How does a browser process a URL? When I type http://www.salas.com:8080/toplevel?p=1 what happens inside the browser, what actions does it take, what messages does it send out, what messages does it receive? <%= deliverable "Research this on the web or in books and come up with a numbered list of actions, with each step in the list being a link to a source on the web that you used to figure that out." %>
-* <%= deliverable "Programming Assignment 2" %> (Look at <%= link_to_pa :PA2 %> for details)
+* <%= deliverable "Programming Assignment 2" %> (Look at <%= link_to_pa :PA2 %> for details) <%= nb ": Extension! Post wherever you are so far, indicate whether you are done or not (to let us know to look at it) but you have until Monday Feb 3 to hand this in." %>
 
 #### Products: Plan of Attack
 
