--- a/lectures/iter1/06_dossier.md.erb
+++ b/lectures/iter1/06_dossier.md.erb
@@ -2,7 +2,7 @@
 title: Building the Dossier
 ---
 <%= homework_hdr %>
-* Work on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
+* Begin Workin on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
 <%= include_topic :hw_paper_prototyping %>
 
 #### 5-minute online survey!
