--- a/lectures/iter2/01_db_design.md.erb
+++ b/lectures/iter2/01_db_design.md.erb
@@ -2,6 +2,8 @@
 title: Database Design
 ---
 <%= homework_hdr %>
+* Continue working on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
+* Reminder: the final deadline for PA2 was *yesterday*
 * Do research on the "Active Record Pattern". Here are some links to start with:
 	* Martin Fowler's [Active Record Pattern](http://www.martinfowler.com/eaaCatalog/activeRecord.html)
 	* [Wikipedia on ActiveRecord](http://en.wikipedia.org/wiki/Active_record_pattern)
