update mentors to reviewers

--- a/incubator/10_mentors.md.erb
+++ b/incubator/10_mentors.md.erb
@@ -1,31 +1,32 @@
 ---
-title: Mentoring Plan
+title: Outside Reviewer
 ---
-Each product team in the incubator will have a mentor. I will be recruiting a mentor for each of the five teams.
+Each product team in the incubator will have an outside reviewer. 
 
-#### Role of the mentor
-The teams should be getting the concepts and nuts and bolts of building the product from the class and from their own work. The Mentor's role is to periodically check in with the team and give them an outside sounding board on the project in areas such as:
+#### Role of the reviewer
+The teams should be getting the concepts and nuts and bolts of building the product from the class and from their own work. The reviewer's role is simply to get an update at the end of each iteration and give the team their feedback from a practical, outside world perspective. 
 
 * Priority setting on features to do and not do
 * Suggesting technologies, platforms, etc to look into
 * Pointing out similar products that could serve as models
-* Team dynamics and assignments
+* Ideas on issues that team might be hitting.
 
-#### Interactions
-The mentor is welcome to structure his or her involvement in whatever way that is agreeable. This is a model for how it might work.
+#### Time Commitment
+I estimate that you (the reviewer) will need to spend about 4 hours total over the next 2.5 months. Here are the approximate guidelines.
 
-* **Team Prep**: (Iter 1: Late Jan/Early Feb) Team prepares a Google Drive "Dossier" about their product. The Dossier will be maintained over the duration of the project.
-* **Face to Face Meeting** (Iter 2: Early Feb) Team + mentor have a face to face kick-off meeting, at the mentors convenience. The objective of the meeting will be to have everyone meet each other, and to set a baseline. The meeting will have a specific agenda. 
-* **Phone or Skype meeting** (Iter 3: Early Mar) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting.
-* **Phone or Skype meeting**: (Iter 4: Early April) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting.
-* **Final Presenetation:** (Iter 5: Very early in May) Final presentation day. By now the products should be in a demoable state. Each student team will have 15 minutes to present their product to an invited audience. The mentor is invited to be an outside expert to help judge the results.
+* **Team Prep**: (Iter 1: Late Jan/Early Feb) Team prepares a Google Drive "Dossier" about their product. The Dossier will be maintained over the duration of the project. (Reviewer time: 0 hours)
+* **Face to Face Meeting** (Iter 2: Early Feb) Team + reviewer have a face to face kick-off meeting, at the reviewers convenience. The objective of the meeting will be to have everyone meet each other, and to set a baseline. The meeting will have a specific agenda. (Reviewer time: 2 hours)
+* **Phone or Skype meeting** (Iter 3: Early Mar) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting. (Reviewer time: 1 hour)
+* **Phone or Skype meeting**: (Iter 4: Early April) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting. (Reviewer time: 1 hour)
+
+There will be a final Presenetation in the first week of May. Each student team will have 15 minutes to present their product to an invited audience. The reviewer is invited to be an outside expert to help judge the results. 
 
 ##### Student and teacher responsibility
-* Prepare a framework of questions and issues to discuss with the mentor before each meeting
-* Design an appropriate agenda for the meeting, built around the convenience of the mentor
-* Making sure the mentor has update materials several days before the call
+* Prepare a framework of questions and issues to discuss with the reviewer before each meeting
+* Design an appropriate agenda for the meeting, built around the convenience of the reviewer
+* Making sure the reviewer has update materials several days before the call
 
-##### Projects Still Seeking a mentor
+##### Projects Still Seeking a reviewer
 * <%= link_to_incubator :vaperater %>
 * <%= link_to_incubator :tradeassistant %>
 * <%= link_to_incubator :whatsgoingon %>
