--- a/lectures/iter1/05_plan_of_attack.md.erb
+++ b/lectures/iter1/05_plan_of_attack.md.erb
@@ -7,10 +7,12 @@ css_class: bold
 * <%= deliverable "Programming Assignment 2" %> (Look at <%= link_to_pa :PA2 %> for details) <%= nb ": Extension! Post wherever you are so far, indicate whether you are done or not (to let us know to look at it) but you have until Monday Feb 3 to hand this in." %>
 
 #### Discussion
-* Tips
+* Ruby Homework tips
 	* Narrate your screencasts
 	* Run from the command line, not irb or pry
 	* Try to make the output legible not just a screen full of numbers!
+	* 1 or 2 Ruby Questions
+	* How 'require' works, and require_relative
 
 #### Products: Plan of Attack
 
