--- a/pa/03_PA2.md.erb
+++ b/pa/03_PA2.md.erb
@@ -47,12 +47,13 @@ You should write comments for each of the methods of your two classes and use Rd
   * The Analysis. A description of the result of running some experiments to determine the accuracy of your method (using the z.run_test(k) method and the MovieTest methods.
   * Benchmarking. An estimate of the time it takes run each prediction (determined by using Time.now to capture the current clock time before and after making k predictions) and an explanation of what you think will happen to that time if you increase the size of the training set by a factor of 10 or 100....
   * Connection to your Incubator Project. A description of the kind of data your webapp could collect and the kinds of predictions it could make (if you wanted to do so....)
+  * Also please update this spreadsheet with the result of your test: <%= [PA2 Results metrics summary](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdGxsejRzSHM2MlJBZE0yb3BzRHB5R0E#gid=0)
 
 <%= deliverable "Comments on at least two (was four) of your fellow student's blog posts." %>
 
 <%= deliverable "The code for your classes in movie_data.rb and movie_test.rb uploaded to github in a folder called PA2" %>
 
-<%= deliverable "A short screen recording showing you using irb to load the ml-100k folder into MovieData, run some tests of the instance methods, generate a MovieTest data with 10 rows from the testing set, and running the instance methods of the MovieTest object. " %>
+<%= deliverable "A short screen recording showing you using irb to load the ml-100k folder into MovieData, run some tests of the instance methods, generate a MovieTest data with 10 rows from the testing set, and running the instance methods of the MovieTest object. " %> <%= nb "It's fine to just run a ruby program from the comamnd line but make sure the output is understandable and explain what you are doing!" %>
 
 <%= deliverable "A link of the result of submitting your code to code climate" %>
 
