--- a/pa/03_PA2.md.erb
+++ b/pa/03_PA2.md.erb
@@ -47,7 +47,7 @@ You should write comments for each of the methods of your two classes and use Rd
   * The Analysis. A description of the result of running some experiments to determine the accuracy of your method (using the z.run_test(k) method and the MovieTest methods.
   * Benchmarking. An estimate of the time it takes run each prediction (determined by using Time.now to capture the current clock time before and after making k predictions) and an explanation of what you think will happen to that time if you increase the size of the training set by a factor of 10 or 100....
   * Connection to your Incubator Project. A description of the kind of data your webapp could collect and the kinds of predictions it could make (if you wanted to do so....)
-  * Also please update this spreadsheet with the result of your test: <%= [PA2 Results metrics summary](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdGxsejRzSHM2MlJBZE0yb3BzRHB5R0E#gid=0)
+  * Also please update this spreadsheet with the result of your test: [PA2 Results metrics summary](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdGxsejRzSHM2MlJBZE0yb3BzRHB5R0E#gid=0)
 
 <%= deliverable "Comments on at least two (was four) of your fellow student's blog posts." %>
 
