updating lectures 1-5 and 1-6

--- a/lab/03_lab_railsintro.md.erb
+++ b/lab/03_lab_railsintro.md.erb
@@ -9,6 +9,14 @@ type: page
 
 #### Lab Objectives
 * So what is Rails, really? It's a library of Ruby code, that's all
+* Review of some basic concepts
+	* Client and Server
+	* Client asks for a page; server sends a page
+	* Rails server receives the request and creates the page and sends it back
+* A level deeper:
+	* Server (usually) looks inside a database for information
+	* And runs an algorithm on that to create html
+	* And that's what gets sent back.
 * I will do a live demo of the Instant Gratification session
 * [Here is a shell recording of the session](http://showterm.io/cb6c881188f6deb1845a9)
 
@@ -20,3 +28,4 @@ type: page
 	* Models
 	* Views
 	* Controllers
+
