--- a/lectures/iter1/05_plan_of_attack.md.erb
+++ b/lectures/iter1/05_plan_of_attack.md.erb
@@ -17,7 +17,7 @@ css_class: bold
 #### Products: Plan of Attack
 
 ##### Iter2 - "Hello World"
-* Prepare "dossier" for mentor as a Google Drive
+* Prepare "dossier" for reviewer as a Google Drive
 	* Paper prototype
 	* Screen Flows
 	* Schema in detail
@@ -29,7 +29,7 @@ css_class: bold
 * Initial build
 
 ##### Iter 3 -  "Pre-Alpha"
-* Update "dossier", meet with Mentor
+* Update "dossier", meet with reviewer
 * Cloud deployment
 * Unit testing
 * Feature work
@@ -38,20 +38,20 @@ css_class: bold
 * Continuous integration
 
 ##### Iter 4 - "MVP"
-* Update "dossier", meet with Mentor
+* Update "dossier", meet with reviewer
 * Initial beta users, get feedback
 * Complete MVP feature set
 * Beautiful user interface
 
 ##### Iter 4 - "Unveiling"
-* Update "dossier", meet with Mentor
+* Update "dossier", meet with reviewer
 * Final touches
 * Presentations
 
 #### Iter2: In more detail
 * Each team tee up a discusion about your product
 * <%= discussion "What are \"difficult technical issues?\"" %>
-* <%= discussion "Mentors" %> (<%= link_to_incubator :mentors %>)
+* <%= discussion "Reviewers" %> (<%= link_to_incubator :reviewer %>)
 
 #### Look at next class
 * Review Paper Prototyping homework for: <%= link_to_lecture :dossier %>
