--- a/lectures/iter1/06_dossier.md.erb
+++ b/lectures/iter1/06_dossier.md.erb
@@ -8,7 +8,7 @@ title: Building the Dossier
 #### 5-minute online survey!
 
 #### Building the Dossier
-* Review plan for mentors: <%= link_to_incubator :mentors %>
+* Review plan for Reviewers: <%= link_to_incubator :reviewer %>
 
 * What goes into the 'dossier'
 	* Review: <%= link_to_topic :paper_prototyping %>
