update lecture 1-5 and 1-6

--- a/lectures/iter1/06_dossier.md.erb
+++ b/lectures/iter1/06_dossier.md.erb
@@ -1,5 +1,6 @@
 ---
 title: Building the Dossier
+css_class: bold
 ---
 <%= homework_hdr %>
 * Begin Workin on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
@@ -8,7 +9,6 @@ title: Building the Dossier
 #### 5-minute online survey!
 
 #### Building the Dossier
-* Review plan for Reviewers: <%= link_to_incubator :reviewer %>
 
 * What goes into the 'dossier'
 	* Review: <%= link_to_topic :paper_prototyping %>
