--- a/lectures/iter1/06_dossier.md.erb
+++ b/lectures/iter1/06_dossier.md.erb
@@ -9,13 +9,26 @@ css_class: bold
 #### 5-minute online survey!
 
 #### Building the Dossier
+* How teams work 'in the real world'
+	* We have 4 out of 5 "Outside Reviewers" lined up!
+	* Awesome people with the right kind of experiences
+	* I will give more details about how to work with them
+	* Team composition
+
+* Dividing up the work even now:
+	* HTML/CSS
+	* Database schema
+	* Getting good with rails
+	* Collecting and writing up 'stories'
 
 * What goes into the 'dossier'
-	* Review: <%= link_to_topic :paper_prototyping %>
-	* Review: <%= link_to_topic :ux_flows %>
-	* Review: <%= link_to_topic :data_modeling %>
-
-* Product by product discussion
+	* UX design intermediate results
+		* Review: <%= link_to_topic :paper_prototyping %>
+		* Review: <%= link_to_topic :ux_flows %>
+		* Product by product discussion
+	* Data models
+		* Review: <%= link_to_topic :data_modeling %>
+		* Product by product discussion
 
 #### Look at next class
 * Look at homework: <%= link_to_lecture :db_design %> 
