--- a/lectures/iter1/06_dossier.md.erb
+++ b/lectures/iter1/06_dossier.md.erb
@@ -6,7 +6,7 @@ css_class: bold
 * Begin Workin on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
 <%= include_topic :hw_paper_prototyping %>
 
-#### 5-minute online survey!
+#### [5-minute online survey!](https://docs.google.com/forms/d/1yHdEI_s35iaZWe2DdE3HJ1WUOnx3q6f2idFYQxat_MM/viewform)
 
 #### Building the Dossier
 * How teams work 'in the real world'
