--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -25,3 +25,5 @@ type: page
 * [How to design a user experience flow chart](http://www.startuprocket.com/blog/how-to-create-a-user-experience-flow-chart-ux-flow-chart)
 * [User Experience: Stop designing screens and start designing flows](http://uxdesign.smashingmagazine.com/2012/01/04/stop-designing-pages-start-designing-flows/)
  * [Effective use of white space in forms](http://www.nngroup.com/articles/form-design-white-space/)
+ * [Laziness, Impatience and Hubris](http://c2.com/cgi/wiki?LazinessImpatienceHubris)
+ 
