--- a/incubator/12_or1_deliverables.md.erb
+++ b/incubator/12_or1_deliverables.md.erb
@@ -1,12 +1,19 @@
 ---
 title: Student Deliverables for OR Meeting 1
 ---
+#### Logistics
+* Meeting will be on Thursday, Feb 26, during our normal lab time
+* See: <%= link_to_incubator :outside_reviewer_logistics %>
+
 #### Product Dossier Contents
 * Product 1 pager
 	* Name of product
 	* One line (twitter length) summary of product
 	* Elevator pitch for product
-	* Team members with email and cell phone contact
+	* Team members
+		* email and cell phone contact
+		* any special expertise? (e.g. css, sql, performance, whatever)
+		* areas of focus for the product
 * Link to Github repo
 	* Of the rails app as far as you have it
 		* Should have at least SOME unit tests
@@ -23,6 +30,13 @@ title: Student Deliverables for OR Meeting 1
 * PivotalTracker with an interesting backlog
 	* You should have generated with your team lots of stories of features
 	* Put them in priority order as best you can
+* Meeting agenda
+	* What do you want to present?
+	* What questions and advice you would like from your reviewer?
 
 
-
+#### Running the meeting
+* Look at this as a "product review meeting" you might have with the CEO or CTO of your company. See also [BillG Review](http://wmworia.wordpress.com/2007/10/22/bill-g-review/)
+* The meeting will go around 1 hour. Make the most of it.
+* The team should lead the discussion to decide what to cover next.
+* It's kind of like when you go to the doctor, they ask you, "So what brings you here." You decide how to use the time.
