--- a/lectures/iter2/01_db_implementation.md.erb
+++ b/lectures/iter2/01_db_implementation.md.erb
@@ -1,5 +1,6 @@
 ---
 title: Implementing the Database
+css_class: bold
 ---
 <%= homework_hdr %>
 * Read Chapters 5 and 6 of AWDR. It is important that you really try and execute all the code snippets there and get them to work. Notice that "rails new depot" creates a directory called "depot" from whereever you are. So cd to your /mydev and to rails new depot from there. Follow along and do all the code in Chaoter 6, prove to yourself that it runs. <%= deliverable "Screencast of you demonstrating what you got to work from those two chapters." %>
