--- a/lab/04_lab_team_time_prep_deliverables.md.erb
+++ b/lab/04_lab_team_time_prep_deliverables.md.erb
@@ -1,11 +1,12 @@
 ---
 title: Team Time - preparing the dossier
-type: page
+css_class: bold
 ---
 <%= homework_hdr %>
 * Continue work on PA3!
 * If you didn't succeed working through AWDR Chapter 2's programming steps, do so now.
 * Get a head start on Chapter 5
+
 #### Goals for Lab today
 * Teams, work on all the bits of the <%= link_to_incubator :or1_deliverables %> or as many as you can
 
