--- a/background/01_pre_work.md.erb
+++ b/background/01_pre_work.md.erb
@@ -24,7 +24,7 @@ This work is not required (after all it is winter break). For those of you who r
 * **LOWER: Learn Rails** Rails is basically a large Ruby library to allow you to design and implement sophisticated, professional web applications. Again googling will find you lots of good resources. However I do recommend you follow a somewhat more structured approach. Here are the recommended resources. Choose one:
 	1. [Agile Web Development with Rails 4](http://www.amazon.com/Agile-Development-Rails-Facets-Ruby/dp/1937785564). You should actually type in and build the sample app. You will learn a lot!
 	1. Code School has a well regarded Rails course. It's quite cheap and may work better for you depending on your learning style. [Rails for Zombies](https://www.codeschool.com/courses/rails-for-zombies-redux)
-
+	1. The RailsApp project has a great book introducing Ruby and Rails: [Learn Ruby on Rails](http://learn-rails.com/learn-ruby-on-rails.html)
 
 ##### Required Books
 
