--- a/lectures/iter2/03_mvc_and_model.md.erb
+++ b/lectures/iter2/03_mvc_and_model.md.erb
@@ -2,7 +2,8 @@
 title: MVC and the model
 ---
 ##### Homework due for today's class
-* Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %> 
+* Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %>
+* Look at <%= link_to_topic :hw_schema_design %>. <%= deliverable "Create a piazza post with a schema for each of the assignments, in the format suggested." %>
 
 
 ##### Data
